--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>About Me</h2>
                 <div class="about-grid">
                     <div class="profile-image">
-                        <img src="C:\Users\honey\OneDrive\سطح المكتب\MyProject\backiee-96330.jpg" alt="Shahad Aladyani">
+                        <img src="pictuer.jpg" alt="Shahad Aladyani">
                     </div>
                     <div class="bio">
                         <p>A computer science professional passionate about developing innovative technical solutions, I hold a Bachelor's degree in Computer Science from Shaqra University with a specialization in Data Analysis and Web Development. I have two years of hands-on experience developing Python applications and building interactive user interfaces using HTML. I excel at transforming complex problems into effective software solutions with a focus on user experience and optimal performance.</p> <!-- فقرة النبذة -->
